--- a/codegen/antlr/Cargo.toml
+++ b/codegen/antlr/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "estree_grammar"
+name = "antlr_codegen"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
+[[bin]]
+name = "antlr_generate"
+path = "src/bin/generate.rs"
+
 [dependencies]
 combine = "3.8.1"
-web_grammar_utils = { path = "../../utils" }
 heck = "0.3.1"
+smol_str = "0.1.10"
+petgraph = "0.4.13"
