--- a/utils/analysis/Cargo.toml
+++ b/utils/analysis/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "web_grammar_utils"
+name = "web_analysis_utils"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
 rowan = "0.5.0"
-combine = "3.8.1"
+rustc-hash = "1.0.1"
+salsa = "0.12.0"
+relative-path = "0.4.0"
