--- a/utils/grammar/Cargo.toml
+++ b/utils/grammar/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "html_grammar"
+name = "web_grammar_utils"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
-web_grammar_utils = { path = "../../utils/grammar" }
+rowan = "0.5.0"
