--- a/utils/test/Cargo.toml
+++ b/utils/test/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "analysis_utils"
+name = "test_utils"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
@@ -9,3 +9,4 @@ rowan = "0.5.0"
 rustc-hash = "1.0.1"
 salsa = "0.12.0"
 relative-path = "0.4.0"
+difference = "2.0.0"
