--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ members = [
   "analysis/vue",
   "codegen/antlr",
   "codegen/estree",
-  "lang/javascript",
-  "lang/typescript",
-  "lang/html",
-  "lang/vue",
+  "grammar/javascript",
+  "grammar/typescript",
+  "grammar/html",
+  "grammar/vue",
   "utils/analysis",
   "utils/grammar",
   "utils/test",
