--- a/analysis/vue/Cargo.toml
+++ b/analysis/vue/Cargo.toml
@@ -5,12 +5,11 @@ authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
 edition = "2018"
 
 [dependencies]
-salsa = "0.12.0"
-
 analysis_utils = { path = "../../utils/analysis" }
 grammar_utils = { path = "../../utils/grammar" }
-html_grammar = { path = "../../lang/html" }
-javascript_grammar = { path = "../../lang/javascript" }
+html_grammar = { path = "../../grammar/html" }
+javascript_grammar = { path = "../../grammar/javascript" }
+salsa = "0.12.0"
 
 [dev-dependencies]
 test_utils = { path = "../../utils/test" }
