--- a/utils/analysis/Cargo.toml
+++ b/utils/analysis/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
+parking_lot = "0.8.0"
+relative-path = "0.4.0"
 rowan = "0.5.0"
 rustc-hash = "1.0.1"
 salsa = "0.12.0"
-relative-path = "0.4.0"
