--- a/utils/analysis/Cargo.toml
+++ b/utils/analysis/Cargo.toml
@@ -10,3 +10,7 @@ relative-path = "0.4.0"
 rowan = "0.5.0"
 rustc-hash = "1.0.1"
 salsa = "0.12.0"
+superslice = "1.0.0"
+
+[dev-dependencies]
+proptest = "0.9.3"
