--- a/analysis/vue/Cargo.toml
+++ b/analysis/vue/Cargo.toml
@@ -12,6 +12,7 @@ javascript_grammar = { path = "../../grammar/javascript" }
 typescript_grammar = { path = "../../grammar/typescript" }
 vue_grammar = { path = "../../grammar/vue" }
 salsa = "0.12.0"
+rustc-hash = "1.0.1"
 
 [dev-dependencies]
 test_utils = { path = "../../utils/test" }
