--- a/analysis/vue/Cargo.toml
+++ b/analysis/vue/Cargo.toml
@@ -11,8 +11,9 @@ html_grammar = { path = "../../grammar/html" }
 javascript_grammar = { path = "../../grammar/javascript" }
 typescript_grammar = { path = "../../grammar/typescript" }
 vue_grammar = { path = "../../grammar/vue" }
-salsa = "0.12.0"
 rustc-hash = "1.0.1"
+salsa = "0.12.0"
+unescape = "0.1.0"
 
 [dev-dependencies]
 test_utils = { path = "../../utils/test" }
