--- a/analysis/vue-cli/Cargo.toml
+++ b/analysis/vue-cli/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
+vue_analysis = { path = "../vue", features = ["runtime"] }
 clap = "2.33.0"
-vue_analysis = { path = "../vue" }
 
