--- a/grammar/typescript/Cargo.toml
+++ b/grammar/typescript/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
-grammar_utils = { path = "../../utils/grammar" }
+code_grammar = { path = "../../utils/grammar" }
 javascript_grammar = { path = "../javascript" }
