--- a/analysis/typescript/Cargo.toml
+++ b/analysis/typescript/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "javascript_analysis"
+name = "typescript_analysis"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
@@ -7,6 +7,6 @@ edition = "2018"
 [dependencies]
 code_analysis = { path = "../../utils/analysis", features = ["ast"] }
 code_grammar = { path = "../../utils/grammar" }
-javascript_grammar = { path = "../../grammar/javascript" }
+typescript_grammar = { path = "../../grammar/typescript" }
 salsa = "0.12.0"
 unescape = "0.1.0"
