--- a/analysis/vue/Cargo.toml
+++ b/analysis/vue/Cargo.toml
@@ -19,6 +19,7 @@ typescript_grammar = { path = "../../grammar/typescript" }
 vue_grammar = { path = "../../grammar/vue" }
 rustc-hash = "1.0.1"
 salsa = "0.12.0"
+serde = { version = "1.0.91", features = ["derive"] }
 unescape = "0.1.0"
 
 [dev-dependencies]
